--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ django-autoslug==1.9.3
 django-autoslug-field==0.2.3
 django-bootstrap3==6.2.2
 django-debug-toolbar==1.4
-django-markdown-deux==1.0.5
 django-model-utils==2.3.1
+-e git://github.com/douzepouze/django-markdown-tag.git#egg=django-markdown-tag
 django-mptt==0.7.4
 django-photologue==3.3.2
 django-sortedm2m==1.0.2
